fix hero overlap on small heights

--- a/css/main.scss
+++ b/css/main.scss
@@ -395,10 +395,15 @@ section {
         }
 
         .grid {
-            position: absolute;
-            bottom: 0;
             grid-template-columns: auto auto auto auto;
         }
+    }
+}
+
+@media only screen and (min-height: 860px) and (min-width: 1080px) {
+    .content .grid {
+        position: absolute;
+        bottom: 0;
     }
 }
 
